feat(api-server, openapi, website): implement login UI
- API: rename and modify /user routes (formerly /login)
- api-server: add GET /user route to provide FE with data for logged-in
user
- Allow user to create user and login from website
- Remove Mirage, too much trouble now that api server exists, doesn't
play well with nextjs App Router without workarounds: https://github.com/miragejs/miragejs/issues/1088
