# common/openapi-api.yaml
@@ -127,7 +127,19 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ExpeditionUpdate'
-  /login/user:
+  /user:
+    get:
+      description: Get data about logged-in user
+      security: []
+      responses:
+        '200':
+          description: data about the user
+          content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserData'
+        '401':
+          description: Error. Not logged in.
     post:
       description: Create a new user
       security: []
@@ -144,12 +156,16 @@ paths:
           description: Error. User already exists
         '401':
           description: Error. Incorrect parameters.
-  /login/login:
+  /user/login:
     post:
       description: Log in an existing user account
       security: []
       requestBody:
-        $ref: '#/paths/~1login~1user/post/requestBody'
+        description: A username and password
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserLogin'
       responses:
         '200':
           description: Successful login, obtain a session cookie to be used in subsequent requests
@@ -409,6 +425,13 @@ components:
         password:
           type: string
       required: [username, password]
+
+    UserData:
+      type: object
+      properties:
+        username:
+          type: string
+      required: [username]
 
     # JSON Patch (RFC 6902)
     # Thanks to Jamie Tanna for the OpenAPI schema
